--- a/css/style.css
+++ b/css/style.css
@@ -30,58 +30,135 @@ body{
 
 
 /*-------+++++++++++++HEADER++++++++++++++++----------*/
-
 header{
     background:#2f55a4 ;
     color: white;
     
 }
 
- 
-
-a:hover{
-    color:white !important;
+.align-items-center {
+    align-items: center!important;
 }
+
+
+element.style {
+}
+.align-items-center {
+    align-items: center!important;
+}
+.d-flex {
+    display: flex!important;
+}
+#header {
+    transition: all 0.5s;
+    z-index: 997;
+    padding: 15px 0;
+}
+.fixed-top {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 1030;
+}
+
+#header .logo {
+    font-size: 30px;
+    margin: 0;
+    padding: 0;
+    line-height: 1;
+    font-weight: 500;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+}
+.me-auto {
+    margin-right: auto!important;
+}
+
+.navbar {
+    padding: 0;
+}
+
+.navbar ul {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    list-style: none;
+    align-items: center;
+}
+.navbar li {
+    position: relative;
+}
+
+.navbar li {
+    position: relative;
+}
+
+.mobile-nav-toggle {
+    color: #fff;
+    font-size: 28px;
+    cursor: pointer;
+    display: none;
+    line-height: 0;
+    transition: 0.5s;
+}
+
+
+
+
+
+
+
+
+
+
+/* a:hover{
+    color:white !important;
+} */
  
-.navbar-brand{
+/* .navbar-brand{
     color: white;
     font-family: 'Jost', sans-serif;
     font-weight: 400;
     letter-spacing: 5px;
     font-size: 30px !important;
     margin-left: -24px;
-}
+} */
 
-.nav-link{
+/* .nav-link{
     color: white !important;
-}
-.hover-me:hover{
-    color:#e24545 !important;
-}
-.hover-me-fixed{
-    color:#e24545 !important ;
-}
+} */
 
-.nav-button{
+
+/* .hover-me:hover{
+    color:#e24545 !important;
+} */
+
+/* .hover-me-fixed{
+    color:#e24545 !important ;
+} */
+
+
+/* .nav-button{
     border: 2px solid #e24545 ;
     border-radius: 25px;
     margin-left: 10px;
     transition: all .5s ease;
 
-}
-.nav-button:hover{
+} */
+/* .nav-button:hover{
     background-color:#e24545;
      
-}
-.nav-button-item {
+} */
+/* .nav-button-item {
   padding-left: 20px !important;
   padding-right: 20px !important;
-}
-.navbar-expand-lg .navbar-nav .nav-link {
+} */
+/* .navbar-expand-lg .navbar-nav .nav-link {
     padding-right: 1rem !important;
     padding-left: 1rem !important;
-}
- .nav-img{
+} */
+ /* .nav-img{
   height: 400px;
   width: 400px;
   margin-bottom: 25px;
@@ -97,25 +174,25 @@ a:hover{
    
   
      
- }
+ } */
  
 
 
- .nav-h1-text {
+ /* .nav-h1-text {
       max-width: 500px;
       font-size: 45px;
       font-family: 'Jost', sans-serif;
       font-weight: 600;
       letter-spacing: 1px;
 
-}
-.nav-h4-text {
+} */
+/* .nav-h4-text {
       font-size: 23px;
       color:rgba(255, 255, 255, 0.6) ;
       max-width: 500px;
       font-family: 'Jost', sans-serif;
       font-weight: 400;
-}
+} */
 
 .cover-btn-div{
     display: inline-flex;
@@ -447,13 +524,117 @@ background-color: #2f55a4 !important;
 /*-------+++++++++++END Call To Action-section++++++++++++----------*/
 
 
-/*-------+++++++++++Portfolio-section++++++++++++----------*/
+/* -------+++++++++++Portfolio-section++++++++++++----------*/
 .portfolio-text{
  text-align: center;
  max-width: 922px;
  font-size: 16px;
  font-family: 'Open Sans', sans-serif;
 }
+.position{
+    text-align: center;
+    margin-top: 25px;
+   background-color: none;
+}
+
+
+ 
+#portfolio-flters {
+    list-style: none;
+    margin-bottom: 20px;
+}
+
+#portfolio-flters li {
+    cursor: pointer;
+    display: inline-block;
+    margin: 10px 5px;
+    font-size: 15px;
+    font-weight: 500;
+    line-height: 1;
+    color: #444444;
+    transition: all 0.3s;
+    padding: 8px 20px;
+    border-radius: 50px;
+    font-family: "Poppins", sans-serif;
+}
+
+
+
+#portfolio-flters li:hover, .portfolio #portfolio-flters li.filter-active {
+    background: #47b2e4;
+    color: #fff;
+}
+
+
+
+
+
+ #portfolio-container{
+    position: relative; 
+    height: 927.5px;
+ }
+ #portfolio-item {
+    position: absolute;
+    left: 0px; top: 0px;
+ }
+
+
+#filter-web{
+    position: absolute; 
+    left: 319.984px; 
+    top: 0px;
+
+ }
+
+#filter-app{
+    position: absolute; 
+    left: 639.968px; 
+    top: 0px;
+}
+
+#filter-card{
+    position: absolute; 
+    left: 639.968px; 
+    top: 196.484px;
+}
+
+ 
+#pr-5{
+    position: absolute; 
+    left: 319.984px; 
+    top: 228.453px;  
+}
+
+#pr-6{
+    position: absolute; 
+    left: 0px; 
+    top: 330.047px;
+}
+#pr-7{
+    position: absolute; 
+    left: 639.968px; 
+    top: 422.203px; 
+}
+#pr-8{
+    position: absolute; 
+    left: 639.968px; 
+    top: 644.328px; 
+}
+#pr-9{
+    position: absolute; 
+    left: 319.984px; 
+    top: 700.891px; 
+}
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -468,16 +649,338 @@ background-color: #2f55a4 !important;
 
 
 
+.navbar-toggler{
+    color: white  ;
+}
+.clint-row{
+    display: flex;
+    justify-content: space-between;
+    padding-left: 57px !important;
+    margin-left: 99px !important;
+}
+.clint-row-2{
+    display: flex;
+    justify-content: space-between;
+    padding-left: 57px !important;
+    margin-left: 99px !important;
+}
+.clint-col-div{
+    background-color:white;
+    max-width: 430px !important;
+    transition: all .5s ease;
+     
+}
+.clint-col-div:hover{
+    transform: translate(0px,-10px);
+}
+
+.clint-col-div-2{
+    background-color:white;
+    max-width: 430px !important;
+    transition: all .5s ease;
+     
+}
+
+.clint-col-div-2:hover{
+    transform: translate(0px,-10px);
+}
 
 
+.clint-img{
+    margin-top: 33px;
+    margin-right: 32px;
+    margin-left: 20px;
+    object-fit: cover;
+    
+}
+ 
+.clint-img img{
+    width: 120px;
+    height: 120px;
+    object-fit: cover;
+    border-radius: 50%;
+    
+}
+.clint-ul{
+    list-style: none;
+    display: flex;
+    padding-left: 0px;
+    margin-right: 91px;
+    justify-content: space-between;
 
+    /* justify-content: space-between; */
+}
 
+.clint-ul li{
+    height: 30px;
+    width: 30px;
+    object-fit: cover;
+   background-color: #f3f5fa;
+   color: #2f55a4;
+    text-align: center;
+    border-radius: 50%;
+    padding: 3px;
 
-
-
-
+}
+.clint-content h4{
+    color: #2f55a4;
+}
+.clint-ul li i{
+    text-align: center;
+}
+.divider-2{
+    height: 1px;
+    width: 75px;
+    background-color: #2f55a4;
+}
 
 
 
 
 /*-------+++++++++++END Clint Testimonial-section++++++++++++----------*/
+
+
+/*-------+++++++++++PRICING section++++++++++++----------*/
+
+.pricing-class{
+    display: flex;
+    justify-content: space-between !important;
+    margin-left: 17px !important;
+}
+
+
+.pricing-class-1{
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    max-width: 295px !important;
+    padding: 48px 46px !important;
+}
+.pricing-class-2{
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    max-width: 295px !important;
+    padding: 48px 46px !important;
+    border-top: 4px solid #e24545;
+}
+.pricing-class-3{
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    max-width: 295px !important;
+    padding: 48px 46px !important;
+}
+
+
+.Get-Started-Btn{
+  
+    padding: 10px 20px;
+    border: 1px solid #e24545;
+    text-decoration: none;
+    color: #e24545;
+    border-radius: 25px;
+    transition: all 1s ease;
+}
+.Get-Started-Btn:hover{
+    color: white;
+    background-color: #e24545;
+    border: none;
+}
+.Get-Started-Btn-2{
+    padding: 10px 20px;
+    background-color: #e24545;
+    text-decoration: none;
+    color: white;
+    border-radius: 25px;
+}
+
+.pricing-class-ul{
+    list-style: none;
+    margin-left: -33px;
+    color: #999;
+}
+
+.pricing-class-ul i{
+    color: green;
+    
+}
+ 
+.fa-xmark-li{
+ text-decoration: line-through;
+ color: #ccc;
+}
+.fa-xmark{
+    color: #ccc !important;  
+}
+
+
+.per-month{
+    color: #e24545;
+}
+
+.Free-Plan{
+    color: #2f55a4;
+    font-size: 22px;
+}
+
+.price i{
+color: #2f55a4;
+font-size: 25px;
+}
+.price span{
+    color: #2f55a4;
+    font-size: 65px;
+}
+
+
+
+
+
+
+
+
+
+
+
+/*-------+++++++++++END PRICING section++++++++++++----------*/
+
+
+/*-------+++++++++++FREQUENTLY-ASKED-QUESTIONSsection++++++++++++----------*/
+
+.FREQUENTLY-ASKED-QUESTIONS{
+    background-color: #f3f5fa;
+   
+    padding: 49px 20px;
+}
+
+.number-span{
+ color: #e24545;
+}
+.p-class-one{
+    color: #2f55a4;
+}
+
+
+/*-------+++++++++++END FREQUENTLY-ASKED-QUESTIONS section++++++++++++----------*/
+
+
+/*-------+++++++++++CONTACT section++++++++++++----------*/
+.contact-row{
+padding-left: 90px;
+}
+.align-items-stretch{
+    padding: 30px !important;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    margin-left: -47px;
+    border-top: 3px solid #e24545;
+}
+.align-items-stretch-2{
+    padding: 15px 25px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    margin-left: 15px;
+    border-top: 3px solid #e24545;
+}
+.php-email-form{
+    padding: 20px;
+}
+.map-class{
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+.contac-class-2{
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.address{
+display: flex;
+align-items: center;
+}
+.fa-location-dot{
+    color: #e24545;
+    font-size: 18px;
+    padding: 15px;
+    border-radius: 50%;
+    background-color: #f3f5fa;
+    margin-left: -6px;
+    margin-right: 10px;
+}
+.text{
+    color: #2f55a4;
+    padding: 10px 15px;
+}
+
+
+
+.email{
+    display: flex;
+    align-items: center;
+    }
+    .fa-envelope{
+        color: #e24545;
+        font-size: 18px;
+        padding: 15px;
+        border-radius: 50%;
+        background-color: #f3f5fa;
+        margin-left: -6px;
+        margin-right: 10px;
+    }
+.text{
+        color: #2f55a4;
+        padding: 10px 15px;
+    }
+
+ .phone{
+        display: flex;
+        align-items: center;
+        }
+.fa-mobile-screen-button{
+            color: #e24545;
+            font-size: 18px;
+            padding: 15px;
+            border-radius: 50%;
+            background-color: #f3f5fa;
+            margin-left: -6px;
+            margin-right: 10px;
+        }
+.text{
+            color: #2f55a4;
+            padding: 10px 15px;
+        }
+    
+
+.sent-msg-btn button{
+
+   background-color: #e24545;
+   padding: 10px 30px;
+   color: white;
+   border: none;
+   border-radius: 25px;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+/*-------+++++++++++END CONTACT section++++++++++++----------*/
+
+
+
+/*-------+++++++++++Join-Our-Newsletter++++++++++++----------*/
+
+.Join-Our-Newsletter{
+    background-color: #f3f5fa;
+    padding: 35px 25px;
+}
+ .Subscribe input{
+    border: 0px;
+    padding: 4px 8px;
+    width: calc(80% -80px);
+ }
+
+
+
+/*-------+++++++++++END Join-Our-Newsletter++++++++++++----------*/
